[package]
name = "mqtt-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.40.0",features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"